# goit-algo2-hw-05

./: pyproject.toml  task_1.py  task_2.py
